[package]
name = "exile-controller"
version = "0.3.0"
edition = "2021"
license = "MIT"

[dependencies]
config = "0.13.3"
serde = "1.0.151"
gilrs = {version ="0.10.1", default-features = false, features = ["xinput"]}
rdev = "0.5.2"
active-win-pos-rs = "0.8.1"
native-dialog = "0.6.3"

# egui
egui_backend = { version = "0.4.0", features = ["egui_bytemuck"] }
egui_overlay = "0.4.1"
egui_extras = {version = "0.22.0", features = ["image"]}
image = { version = "0.24.7", features = ["png"] }
egui_window_glfw_passthrough = "0.4.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[[bin]]
name = "exile-controller"
path = "src/main.rs"
